--- a/src/assets/css/public/_global.scss
+++ b/src/assets/css/public/_global.scss
@@ -80,6 +80,10 @@ body {
 /**
  * Width
  */
+.wp-32 {
+    width: 32px !important;
+}
+
 .wp-50 {
     width: 50px !important;
 }
@@ -118,6 +122,53 @@ body {
 
 .wp-200 {
     width: 200px !important;;
+}
+
+/**
+ * Height
+ */
+.hp-32 {
+    height: 32px !important;
+}
+
+.hp-50 {
+    height: 50px !important;
+}
+
+.hp-75 {
+    height: 75px !important;
+}
+
+.hp-80 {
+    height: 80px !important;
+}
+
+.hp-100 {
+    height: 100px !important;
+}
+
+.hp-120 {
+    height: 120px !important;
+}
+
+.hp-125 {
+    height: 125px !important;
+}
+
+.hp-150 {
+    height: 150px !important;;
+}
+
+.hp-175 {
+    height: 175px !important;;
+}
+
+.hp-180 {
+    height: 180px !important;;
+}
+
+.hp-200 {
+    height: 200px !important;;
 }
 
 /**
