--- a/src/assets/css/public/__style.scss
+++ b/src/assets/css/public/__style.scss
@@ -17,5 +17,10 @@
 //  Do import
 //  Example:
 //  @import "some-css";
-@import "home";
+@import "auth";
+@import "base";
+@import "select2";
+@import "toast";
+@import "dash-box";
+@import "search";
 // TODO
