--- a/src/assets/css/public/_card.scss
+++ b/src/assets/css/public/_card.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 .card-footer {
     .btn.float-right {
         margin-left: 1rem;
