--- a/src/assets/css/public/_alert.scss
+++ b/src/assets/css/public/_alert.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 .alert-set .alert:last-child {
     margin-bottom: 0;
 }
