--- a/src/assets/css/public/_button.scss
+++ b/src/assets/css/public/_button.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 .btn {
     &.text-truncate {
         padding-right: 2.25rem;
