--- a/src/assets/css/public/_dropdown.scss
+++ b/src/assets/css/public/_dropdown.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 .dropdown-toggle.no-arrow::after {
     display: none;
 }
