--- a/src/assets/css/public/_error-page.scss
+++ b/src/assets/css/public/_error-page.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 .error {
     width: 13.5rem;
 }
