--- a/src/assets/css/public/_home.scss
+++ b/src/assets/css/public/_home.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 @import "variables";
 
 html, body {
