--- a/src/assets/css/public/_modal.scss
+++ b/src/assets/css/public/_modal.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 @media (min-width: 768px) {
     .modal-md {
         max-width: 700px;
