--- a/src/assets/css/public/_page-popping.scss
+++ b/src/assets/css/public/_page-popping.scss
@@ -1,3 +1,7 @@
+/**
+ * Base - Any modification needs to be approved, except the space inside the block of TODO
+ */
+
 body.has-page-popping {
     overflow: hidden;
 }
