--- a/src/assets/css/public/_button.scss
+++ b/src/assets/css/public/_button.scss
@@ -56,6 +56,7 @@
 }
 
 .btn-item-left {
+    float: left;
     margin-right: 1rem;
 }
 
@@ -75,6 +76,7 @@
     }
 
     .btn-item-left {
+        float: none;
         margin-right: 0;
     }
 
