--- a/src/assets/css/public/_home.scss
+++ b/src/assets/css/public/_home.scss
@@ -4,53 +4,23 @@
 
 @import "variables";
 
-html, body {
-    background-color: #fff;
-    color: #636b6f;
+#app {
     font-family: $font-nunito;
-    font-weight: 200;
-    height: 100vh;
-    margin: 0;
-}
-
-.full-height {
-    height: 100vh;
-}
-
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.position-ref {
-    position: relative;
-}
-
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
-}
-
-.content {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     text-align: center;
+    color: #2c3e50;
 }
 
-.title {
-    font-size: 84px;
-}
+#nav {
+    padding: 30px;
 
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
+    a {
+        font-weight: bold;
+        color: #2c3e50;
 
-.m-b-md {
-    margin-bottom: 30px;
+        &.router-link-exact-active {
+            color: #42b983;
+        }
+    }
 }
